--- a/.env
+++ b/.env
@@ -43,3 +43,14 @@ MAILER_DSN=null://null
 ###< symfony/mailer ###
 
 OMDB_API_KEY=XXXXXXX
+###> symfony/firebase-notifier ###
+# FIREBASE_DSN=firebase://TOKEN@default
+###< symfony/firebase-notifier ###
+
+###> symfony/slack-notifier ###
+# SLACK_DSN=slack://TOKEN@default?channel=CHANNEL
+###< symfony/slack-notifier ###
+
+###> symfony/discord-notifier ###
+# DISCORD_DSN=discord://TOKEN@default?webhook_id=ID
+###< symfony/discord-notifier ###
