--- a/config/packages/notifier.yaml
+++ b/config/packages/notifier.yaml
@@ -1,10 +1,11 @@
 framework:
     notifier:
-        #chatter_transports:
-        #    slack: '%env(SLACK_DSN)%'
+        chatter_transports:
+            slack: 'null://null'
+            discord: 'null://null'
         #    telegram: '%env(TELEGRAM_DSN)%'
-        #texter_transports:
-        #    twilio: '%env(TWILIO_DSN)%'
+        texter_transports:
+            twilio: 'null://null'
         #    nexmo: '%env(NEXMO_DSN)%'
         channel_policy:
             # use chat/slack, chat/telegram, sms/twilio or sms/nexmo
